Sprint 1 - Fix all Open issues