@@ -1,5 +1,6 @@
 package org.zalmoxis.evetic.services.implementations;
 
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,21 +10,19 @@ import org.springframework.stereotype.Service;
 import org.zalmoxis.evetic.entities.User;
 import org.zalmoxis.evetic.repositories.UserRepo;
 
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
     private final UserRepo userRepo;
 
     @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+    public @NonNull UserDetails loadUserByUsername(@NonNull String username) throws UsernameNotFoundException {
         User user = userRepo.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
 
         var authorities = user.getRoles().stream()
                 .map(role -> new SimpleGrantedAuthority(role.getSpringSecurityRole()))
-                .collect(Collectors.toList());
+                .toList();
 
         return org.springframework.security.core.userdetails.User.builder()
                 .username(user.getUsername())
